--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="nav">
         <div class="container">
             <div class="nav-content">
-                <div class="logo">SAXMAN CONSULTING</div>
+                <a href="#" class="logo">SAXMAN CONSULTING</a>
                 <a href="#book" class="nav-cta">Book a Call</a>
             </div>
         </div>
@@ -167,7 +167,7 @@
                     </form>
                     
                     <div class="contact-alternative">
-                        <p>Or email directly at <a href="mailto:johnsaxman87@gmail.com">johnsaxman87@gmail.com</a></p>
+                        <p>Or email directly at <a href="/cdn-cgi/l/email-protection#365c595e5845574e5b57580e0176515b575f5a1855595b"><span class="__cf_email__" data-cfemail="7e141116100d1f06131f1046493e19131f1712501d1113">[email&#160;protected]</span></a></p>
                     </div>
                 </div>
             </div>
@@ -183,15 +183,4 @@
                     <p>Strategic guidance for your success</p>
                 </div>
                 <div class="footer-contact">
-                    <p>Email: <a href="mailto:johnsaxman87@gmail.com">johnsaxman87@gmail.com</a></p>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2026 Saxman Consulting. All rights reserved.</p>
-            </div>
-        </div>
-    </footer>
-
-    <script src="script.js"></script>
-</body>
-</html>
+                    <p>Email: <a href="/cdn-cgi/l/email-protection#f79d989f9984968f9a9699cfc0b7909a969e9bd994989a"><span class="__cf_email__" data-cfemail="2f454047415c4e57424e4117186f48424e4643014c4042">[email&#160;prot
