Update contact email to johnsaxman87@gmail.com

--- a/index (1).html
+++ b/index (1).html
@@ -167,7 +167,7 @@
                     </form>
                     
                     <div class="contact-alternative">
-                        <p>Or email directly at <a href="/cdn-cgi/l/email-protection#365c595e5845574e5b57580e0176515b575f5a1855595b"><span class="__cf_email__" data-cfemail="7e141116100d1f06131f1046493e19131f1712501d1113">[email&#160;protected]</span></a></p>
+                        <p>Or email directly at <a href="mailto:johnsaxman87@gmail.com">johnsaxman87@gmail.com</a></p>
                     </div>
                 </div>
             </div>
@@ -183,4 +183,4 @@
                     <p>Strategic guidance for your success</p>
                 </div>
                 <div class="footer-contact">
-                    <p>Email: <a href="/cdn-cgi/l/email-protection#f79d989f9984968f9a9699cfc0b7909a969e9bd994989a"><span class="__cf_email__" data-cfemail="2f454047415c4e57424e4117186f48424e4643014c4042">[email&#160;prot
+                    <p>Email: <a href="mailto:johnsaxman87@gmail.com">johnsaxman87@gmail.com</a></p>
